# hrungnir

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  implementation-plan.md  pyproject.toml
.github/workflows/: ci.yml
src/hrungnir/: __init__.py  server.py
src/hrungnir/integrations/: __init__.py
src/hrungnir/models/: __init__.py  build.py  chain_build.py  gating.py  package.py
src/hrungnir/prompts/: __init__.py  upstream.py
src/hrungnir/resources/: __init__.py
src/hrungnir/services/: chain_build_service.py
src/hrungnir/tools/: __init__.py  specfile.py
src/hrungnir/utils/: __init__.py  package_graph.py
tests/: __init__.py  test_models.py  test_server.py
